# locally-euclidean

./: .envrc  .gitignore  Cargo.toml  README.md  flake.nix  process-compose.yaml
.cargo/: audit.toml
.github/workflows/: docker-push.yml
.sqlx/: query-05951ad3448c953f5c84f105171054d1f08b92fd8f2cfeb640dc5f19c3e61fde.json  query-1c160275f0cf042a794af9c5821cf66ff4812c70507c3a95f87627fbedc0606a.json  query-1f072473a29bdceb7fcb8b400c21d2644a683bed8c64dbda2807b82e18698af1.json  query-2d4e77bbc95886020e60fce9de5e6d0ba35526e02b03de12aa015216a2c7a09e.json  query-2e30af3b132f67466415c2fcf93b10ec5906f35c69dd9992860397a90b445a92.json  query-39469e0f4964bcb8dd87fed10157d652ce9e578aba9a51a3afe0a4f626ac3fca.json  query-4bb569f3fcdb44ee0c27b024db9571d5967548acf980a8cd22e42f58b215f91b.json  query-688b113d346d8de4f63626a50327fde372a19562179376c64d251c36b626ab27.json  query-78c5ee0eee91c2bf8289d65631f4c44be3e6857e71ac250b27ec2c5c9b6995a3.json  query-82e2f2fdd9c69819f74e0859d831670a8780d1536f7192edc228e4ebf3daaaf9.json  query-99fd03b5d6c819ca6cbc8a0b5984b0551995432b42f3dd013cc02be796557305.json  query-c903710e726e380abac04aeca055d56a5ed4c705e24e2c7268380036109d36c8.json  query-d24ce34597f5e423ae23400e1a4fbba6059af44186de7e363f7ff3ea6cdc4793.json
migrations/: 20250530003124_initial_schema.sql
scripts/: setup-db.sh
server/: Cargo.toml
server/src/: api.rs  config.rs  errors.rs  explore.rs  lib.rs  main.rs  security_headers.rs  tasks.rs  tracing_setup.rs
server/tests/: e2e.rs
storage/: Cargo.toml
storage/src/: file_backend.rs  lib.rs  postgres.rs
storage/src/postgres/: blob.rs  mod.rs
