[workspace]
members = ["server/"]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
tokio = { version = "1.45.0", features = ["full"] }
axum = "0.8.4"
tracing = "0.1.41"
opentelemetry = "0.29.1"
axum-tracing-opentelemetry = "0.28.0"
tracing-opentelemetry = "0.30.0"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
init-tracing-opentelemetry = { version = "0.28.0", features = ["otlp", "opentelemetry-otlp", "tls", "tonic", "tls-roots", "tracing_subscriber_ext"] }
opentelemetry_sdk = { version = "0.29.0", features = ["tokio", "http", "opentelemetry-http"] }
