[workspace]
members = ["server/", "storage/"]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
tokio = { version = "1.45.0", features = ["full"] }
thiserror = "2.0.12"
async-trait = "0.1.88"
pin-project = "1.1.10"
serde = { version = "1.0.219", features = ["derive"] }
config = { version = "0.15.11", features = ["toml"], default-features = false }
tokio-util = { version = "0.7.15", features = ["tracing"] }
chrono = "0.4.41"
futures-core = "0.3.31"
assert-impl = "0.1.3"

# Unix
rustix = "1.0.7"
tempfile = "3.20.0"
camino = "1.1.9"
xattr = { version = "1.5.0", default-features = false }
nix = { version = "0.26.4", features = ["fs"] }

# OTel
axum-tracing-opentelemetry = "0.28.0"
tracing = "0.1.41"
opentelemetry = "0.29.1"
tracing-opentelemetry = "0.30.0"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
init-tracing-opentelemetry = { version = "0.28.0", features = ["otlp", "opentelemetry-otlp", "tls", "tonic", "tls-roots", "tracing_subscriber_ext"] }
opentelemetry_sdk = { version = "0.29.0", features = ["tokio", "http", "opentelemetry-http"] }

# Web server components
tower = { version = "0.5.2", features = ["tracing", "tokio", "tokio-stream", "tokio-util"] }
tower-http = { version = "0.6.4", features = ["cors", "set-header"] }
axum = "0.8.4"
tower-service = "0.3.3"
axum-test = "17.3.0"
http-body-util = "0.1.3"
tokio-stream = "0.1.17"

# Database
sqlx = { version = "0.8.6", features = ["postgres", "runtime-tokio", "tls-rustls", "migrate", "uuid", "chrono"] }
tmp-postgrust = { version = "0.9.0", features = ["tokio", "tokio-process"] }
