[package]
name = "server"
description = "locally-euclidean server"

version.workspace = true
edition.workspace = true

[dependencies]
tokio.workspace = true
axum.workspace = true
tracing.workspace = true
opentelemetry.workspace = true
axum-tracing-opentelemetry.workspace = true
tracing-opentelemetry.workspace = true
tracing-subscriber.workspace = true
init-tracing-opentelemetry.workspace = true
opentelemetry_sdk = { workspace = true, features = ["tokio", "http", "opentelemetry-http", "serde"] }
xattr.workspace = true

storage = { path = "../storage" }
tower.workspace = true
tower-http.workspace = true
tower-service.workspace = true
serde.workspace = true
config.workspace = true
thiserror.workspace = true
tempfile.workspace = true
http-body-util.workspace = true
tokio-stream.workspace = true
tokio-util.workspace = true
httpdate = "1.0.3"

[dev-dependencies]
axum-test.workspace = true
