[package]
name = "server"
description = "locally-euclidean server"

version.workspace = true
edition.workspace = true

# rename binary from "server" to "locally-euclidean"
[[bin]]
name = "locally-euclidean"
path = "src/main.rs"

[dependencies]
tokio.workspace = true
axum.workspace = true
tracing.workspace = true
opentelemetry.workspace = true
axum-tracing-opentelemetry.workspace = true
tracing-opentelemetry.workspace = true
tracing-subscriber.workspace = true
init-tracing-opentelemetry.workspace = true
opentelemetry_sdk = { workspace = true, features = ["tokio", "http", "opentelemetry-http", "serde"] }

storage = { path = "../storage" }
tower.workspace = true
tower-http.workspace = true
tower-service.workspace = true
serde.workspace = true
config.workspace = true
thiserror.workspace = true
http-body-util.workspace = true
tokio-stream.workspace = true
tokio-util.workspace = true
httpdate = "1.0.3"
clap = { version = "4.5.39", features = ["derive"] }
sqlx.workspace = true
chrono.workspace = true
futures.workspace = true
humantime = "2.2.0"
# miette is a fancy cat! this feature gives us colour error output
miette = { version = "7.6.0", features = ["fancy"] }

[dev-dependencies]
axum-test.workspace = true
