[package]
name = "storage"
version.workspace = true
edition.workspace = true

[dependencies]
thiserror.workspace = true
async-trait.workspace = true
tokio.workspace = true
rustix.workspace = true
camino.workspace = true
pin-project.workspace = true
xattr.workspace = true
tracing.workspace = true
time.workspace = true
sqlx = { version = "0.8.6", features = ["postgres", "runtime-tokio", "tls-rustls", "migrate"] }

[dev-dependencies]
tempfile.workspace = true
