[package]
name = "storage"
version.workspace = true
edition.workspace = true

[dependencies]
thiserror.workspace = true
async-trait.workspace = true
tokio.workspace = true
camino.workspace = true
pin-project.workspace = true
tracing.workspace = true
chrono.workspace = true
sqlx.workspace = true
tmp-postgrust.workspace = true
futures-core.workspace = true
# used for three u32 Whence constants >_>
nix.workspace = true
assert-impl.workspace = true
